# target-mako

./: .gitignore  .travis.yml  MANIFEST.in  README.md  requirements.txt  sample_config.json  setup.cfg  setup.py
target_mako/: __init__.py  dict_proxy.py  formatting_functions.py
templates/csv/: sample.template.csv  sample_header.template.csv  sample_missing_key.template.csv  sample_missing_key2.template.csv
templates/json/: sample.template.json  sample_footer.template.json  sample_header.template.json
tests/: __init__.py  formatting_functions.py  test_dict_proxy.py
