[metadata]
description-file = README.md

[aliases]
test = pytest

[tool:pytest]
python_files = tests/*.py
addopts = -v
	--self-contained-html
	--html=dist/test-reports/report.html
	--junitxml=dist/test-reports/unit/report.xml

[coverage:run]
include = target_mako/*.py
omit = venv
branch = True

[coverage:html]
directory = dist/test-coverage/html

[coverage:xml]
output = dist/test-coverage/coverage.xml
